fix bug digits overflow in display

--- a/src/components/Display.css
+++ b/src/components/Display.css
@@ -6,6 +6,9 @@
   align-items: center;
   padding: 20px;
   font-size: 2.1em;
-  overflow: hidden;
 }
 
+
+.item {
+  overflow: hidden;
+}
